<resources>
    <string name="menu_mapMode">Map Mode</string>
    <string name="title_activity_placemark_maps">Map of all Placemarks</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="app_name">Storee</string>
    <string name="button_addPlacemark">Store Story</string>
    <string name="button_getQuote">Quote</string>
    <string name="hint_placemarkTitle">Title</string>
    <string name="hint_placemarkDescription">"Once upon a time..."</string>
    <string name="menu_addPlacemark">Add</string>
    <string name="menu_cancelPlacemark">Cancel</string>
    <string name="enter_placemark_title"> Please enter a story title </string>
    <string name="save_placemark"> Store </string>
    <string name="button_addImage"> Add Story Image </string>
    <string name="select_placemark_image">Select Story Image</string>
    <string name="change_placemark_image">Change Story Image</string>
    <string name="button_location">Set Story Location</string>
    <string name="title_activity_map">Map</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Character</string>
    <string name="about">About</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="menu_savePlacemark">Save</string>
    <string name="menu_deletePlacemark">Delete</string>
    <!-- login strings -->
    <string name="title_activity_login"> Signup/Login to Placemark</string>
    <string name="menu_showMap">Show Map</string>

    <string name="menu_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messageLoading">Please wait while the stories are loading...</string>
    <string name="background_text"> store your stories store your stories  store your stories store your stories  store your stories store your stories  store your stories store your stories  store your stories store your stories  store your stories store your stories  store your stories store your stories  store your stories store your stories  store your stories store your stories  store your stories store your stories  store your stories store your stories store your stories store your stories store your stories store your stories store your stories store your stories store your stories store your stories store your stories store your stories store your stories store store your stories store store your stories store your stories  store your stories store your stories  store your stories store your stories  store your stories store your stories  store your stories store your stories  store your stories store your stories  store your stories store your stories  store your stories store your stories  store your stories store your stories  store your stories store your stories  store your stories store your stories store your stories store your stories store your stories store your stories store your stories store your stories store your stories store your stories store your stories store your stories store your stories store store your stories store store your stories store your stories  store your stories store your stories  store your stories store your stories  store your stories store your stories  store your stories store your stories  store your stories store your stories  store your stories store your stories  store your stories store your stories  store your stories store your stories  store your stories store your stories  store your stories store your stories store your stories store your stories store your stories store your stories store your stories store your stories store your stories store your stories store your stories store your stories store your stories store store your stories store </string>

    <string name="nav_header_title">Storee</string>
    <string name="nav_header_subtitle">storee@storee.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="quotation">Quotation</string>
    <string name="menu_quote">Quote</string>
    <string name="quote_message">Quote of the Day</string>
    <string name="fragment_quote">Quotes to inspire your writing</string>
    <string name="add">Add</string>
    <string name="sign_out">Sign Out</string>
    <string name="access_control">Access Control</string>
    <string name="aboutStoree">The Storee App stores your stories. Add notes, pictures, voice recordings, and locations for your stories. No more scrambling for pen and paper when the closing line of your chapter hits you on the bus. Writer\'s block? Try our new inspiring quotation button!</string>
    <string name="aboutTitle">About</string>
    <string name="account">Account</string>
    <string name="get_quotation">Get quotation</string>
    <string name="record_story_audio">Record Story Audio</string>
    <string name="descriptionHint">Add notes on plot, characters, context</string>
    <string name="map">Map</string>

</resources>