<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/quoteFragment"
            android:icon="@drawable/ic_add_new_foreground"
            android:title="@string/add" />
        <item
            android:id="@+id/mapView2"
            android:icon="@drawable/ic_location_icon_foreground"
            android:title="@string/map" />

    </group>
    <item android:title="@string/access_control">
        <menu>
            <item
                android:id="@+id/signout"
                android:icon="@drawable/ic_return_icon_foreground"
                android:onClick="signOut"
                android:title="@string/sign_out" />
        </menu>
    </item>
</menu>