<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wit.placemark.views.placemark.PlacemarkView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-16dp">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF8800"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/placemarkTitle"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:gravity="center_horizontal"
                    android:hint="@string/hint_placemarkTitle"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp"
                    android:typeface="sans" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#00695C"
                    android:hint="@string/descriptionHint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:gravity="top"
                        android:inputType="text|textCapSentences|textAutoCorrect|textMultiLine"
                        android:maxLength="10000"
                        android:maxLines="100"
                        android:minLines="8"
                        android:padding="8dp"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp"
                        android:typeface="sans"
                        android:background="@null"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <!--android:hint="@string/hint_placemarkDescription"-->




               <!-- <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="top"
                    android:hint="@string/hint_placemarkDescription"
                    android:inputType="text|textCapSentences|textAutoCorrect|textMultiLine"
                    android:maxLength="10000"
                    android:maxLines="100"
                    android:minLines="8"
                    android:padding="8dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:typeface="sans" /> -->


                <LinearLayout
                    android:id="@+id/outputs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="125dp"
                        android:textSize="15sp"
                        android:textColor="@color/colorAccent"
                        android:textStyle="italic"
                        android:shadowColor="#888888"
                        android:textAlignment="center"

                        />


                    <ImageView
                        android:id="@+id/placemarkImage"
                        android:layout_width="wrap_content"
                        android:layout_height="95dp"
                        android:layout_gravity="center_horizontal"
                        app:layout_constraintTop_toBottomOf="@+id/description"
                        app:srcCompat="@drawable/ic_image_icon_foreground" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal">

                    <!--android:layout_marginBottom="208dp"-->



                    <ImageButton
                        android:id="@+id/chooseImage"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_margin="16dp"
                        android:layout_weight="1"
                        android:background="@android:color/holo_orange_dark"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:src="@drawable/ic_image_icon_foreground"
                        android:text="@string/button_addImage"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        android:tooltipText="Add Image" />

                    <ImageButton
                        android:id="@+id/placemarkLocation"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_margin="16dp"
                        android:layout_weight="1"
                        android:background="@android:color/holo_orange_dark"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:src="@drawable/ic_location_icon_foreground"
                        android:stateListAnimator="@null"
                        android:text="@string/button_location"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        android:tooltipText="Add Location" />

                    <ImageButton
                        android:id="@+id/storyAudio"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_margin="16dp"
                        android:layout_weight="1"
                        android:background="@android:color/holo_orange_dark"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:src="@drawable/ic_audio_icon_foreground"
                        android:stateListAnimator="@null"
                        android:text="@string/record_story_audio"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        android:tooltipText="Add Audio" />

                    <ImageButton
                        android:id="@+id/btVarl"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_margin="16dp"
                        android:layout_weight="1"
                        android:background="@android:color/holo_orange_dark"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:src="@drawable/ic_get_quote_foreground"
                        android:stateListAnimator="@null"
                        android:text="@string/get_quotation"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        android:tooltipText="Get Inspiration" />

                    <ImageButton
                        android:id="@+id/btnDelete"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_margin="16dp"
                        android:layout_weight="1"
                        android:background="@android:color/holo_orange_dark"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:src="@drawable/ic_delete_icon_foreground"
                        android:stateListAnimator="@null"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        android:tooltipText="Delete Story" />

                </LinearLayout>








               <!-- <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnAdd"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="bottom|center"
                    android:layout_margin="16dp"
                    android:background="@android:color/holo_orange_dark"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:src="@drawable/ic_fab5_icon_foreground"
                    android:stateListAnimator="@null"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:tooltipText="Store Story"
                    app:backgroundTint="@android:color/holo_orange_dark"
                    app:borderWidth="0dp"
                    app:elevation="1dp"
                    app:fabCustomSize="100dp"
                    app:maxImageSize="150dp"
                    app:pressedTranslationZ="1dp"
                    app:showAsAction="always" />-->




                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapView2"
                    android:layout_width="405dp"
                    android:layout_height="244dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <TextView
                    android:id="@+id/lat"
                    android:layout_width="95dp"
                    android:layout_height="19dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="28dp"
                    android:text="00.000000"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/lng"
                    android:layout_width="92dp"
                    android:layout_height="19dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="28dp"
                    android:text="00.000000"
                    android:textAlignment="center" />


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="90dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="84dp"
                    android:text="Location"
                    android:textAlignment="center" />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>



